@@ -15,17 +15,19 @@ struct LOCUST_INFO
     BYTE counter;
 };
 
-namespace TEN::Entities::TR4 {
+namespace TEN::Entities::TR4 
+{
     constexpr auto MAX_LOCUSTS = 64;
     constexpr auto LOCUST_LARA_DAMAGE = 3;
     constexpr auto LOCUST_ENTITY_DAMAGE = 1;
 
     extern LOCUST_INFO Locusts[MAX_LOCUSTS];
 
-    extern int CreateLocust(void);
+    extern int CreateLocust();
     extern void SpawnLocust(ItemInfo* item);
     extern void InitialiseLocust(short itemNumber);
     extern void LocustControl(short itemNumber);
-    extern void UpdateLocusts(void);
-    extern void DrawLocust(void);
+    extern void UpdateLocusts();
+    extern void ClearLocusts();
+    extern void DrawLocust();
 }
